--- a/subprojects/veins_libairmobisim2/examples/simpleScenario/omnetpp.ini
+++ b/subprojects/veins_libairmobisim2/examples/simpleScenario/omnetpp.ini
@@ -3,5 +3,5 @@
 [General]
 # nothing here
 
-[Config DroCIManager1]
-network = DroCIManager1
+[Config SimpleScenarioNetwork]
+network = SimpleScenarioNetwork
