--- a/subprojects/veins_libairmobisim2/examples/simpleScenario/omnetpp.ini
+++ b/subprojects/veins_libairmobisim2/examples/simpleScenario/omnetpp.ini
@@ -1,7 +1,78 @@
 # This file is shared by all tictoc simulations.
 # Lines beginning with `#' are comments
 [General]
-# nothing here
-
-[Config SimpleScenarioNetwork]
+cmdenv-express-mode = true
+cmdenv-autoflush = true
+cmdenv-status-frequency = 1s
+**.cmdenv-log-level = info
 network = SimpleScenarioNetwork
+
+##########################################################
+#            Simulation parameters                       #
+##########################################################
+debug-on-errors = true
+print-undisposed = true
+
+sim-time-limit = ${simTimeLimit = 30s}
+
+**.scalar-recording = true
+**.vector-recording = true
+
+*.playgroundSizeX = 2500m
+*.playgroundSizeY = 2500m
+*.playgroundSizeZ = 50m
+
+##########################################################
+# Annotation parameters                                  #
+##########################################################
+*.annotations.draw = true
+
+
+##########################################################
+#            TraCIScenarioManager parameters             #
+##########################################################
+*.manager.updateInterval = 0.01s
+*.manager.simTimeLimit = ${simTimeLimit}
+*.manager.host = "localhost"
+
+
+##########################################################
+#            11p specific parameters                     #
+#                                                        #
+#                    NIC-Settings                        #
+##########################################################
+*.connectionManager.sendDirect = true
+*.connectionManager.maxInterfDist = 2600m
+*.connectionManager.drawMaxIntfDist = false
+
+*.**.nic.mac1609_4.useServiceChannel = false
+
+*.**.nic.mac1609_4.txPower = 20mW
+*.**.nic.mac1609_4.bitrate = 6Mbps
+*.**.nic.phy80211p.minPowerLevel = -110dBm
+
+*.**.nic.phy80211p.useNoiseFloor = true
+*.**.nic.phy80211p.noiseFloor = -98dBm
+
+*.**.nic.phy80211p.decider = xmldoc("config.xml")
+*.**.nic.phy80211p.analogueModels = xmldoc("config.xml")
+*.**.nic.phy80211p.usePropagationDelay = true
+
+*.**.nic.phy80211p.antenna = xmldoc("antenna.xml", "/root/Antenna[@id='monopole']")
+*.node[*].nic.phy80211p.antennaOffsetY = 0 m
+*.node[*].nic.phy80211p.antennaOffsetZ = 1.895 m
+
+
+##########################################################
+#                      Mobility                          #
+##########################################################
+*.uav[*].drociMobility.x = 0
+*.uav[*].drociMobility.y = 0
+*.uav[*].drociMobility.z = 0
+
+##########################################################
+#                      App Layer                         #
+##########################################################
+*.node[*].applType = "ExampleAirMobiSimApp"
+
+
