Add changes for IAV Demo

--- a/subprojects/veins_libairmobisim2/examples/simpleScenario/omnetpp.ini
+++ b/subprojects/veins_libairmobisim2/examples/simpleScenario/omnetpp.ini
@@ -6,6 +6,7 @@ cmdenv-autoflush = true
 cmdenv-status-frequency = 1s
 **.cmdenv-log-level = info
 network = SimpleScenarioNetwork
+image-path = ../../images
 
 ##########################################################
 #            Simulation parameters                       #
@@ -18,8 +19,8 @@ sim-time-limit = ${simTimeLimit = 30s}
 **.scalar-recording = true
 **.vector-recording = true
 
-*.playgroundSizeX = 2500m
-*.playgroundSizeY = 2500m
+*.playgroundSizeX = 3500m
+*.playgroundSizeY = 3500m
 *.playgroundSizeZ = 50m
 
 ##########################################################
