configure now detects whether proto files are compiled. Added compiled proto files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ doc/neddoc
 
 /out
 
+subprojects/veins_libairmobisim2/src/veins_libairmobisim/proto
+
 examples/**/results
 examples/**/.tkenvrc
 examples/**/.qtenvrc
