--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ doc/neddoc
 
 /out
 
-subprojects/veins_libairmobisim2/src/veins_libairmobisim/proto
+subprojects/veins_libairmobisim2/src/veins_libairmobisim/proto/*
 
 examples/**/results
 examples/**/.tkenvrc
