Add SUMO simulation to default sim setup

--- a/subprojects/veins_libairmobisim2/examples/simpleScenario/omnetpp.ini
+++ b/subprojects/veins_libairmobisim2/examples/simpleScenario/omnetpp.ini
@@ -28,13 +28,25 @@ sim-time-limit = ${simTimeLimit = 30s}
 ##########################################################
 *.annotations.draw = true
 
+##########################################################
+# Obstacle parameters                                    #
+##########################################################
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
 ##########################################################
-*.manager.updateInterval = 0.01s
+*.manager.updateInterval = ${updateInterval = 0.01s}
 *.manager.simTimeLimit = ${simTimeLimit}
 *.manager.host = "localhost"
+
+*.tManager.updateInterval = ${updateInterval}
+*.tManager.host = "localhost"
+*.tManager.port = 9999
+*.tManager.autoShutdown = true
+*.tManager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.tManager.configFile = "erlangen.sumo.cfg"
+
 
 
 ##########################################################
@@ -71,6 +83,9 @@ sim-time-limit = ${simTimeLimit = 30s}
 *.uav[*].drociMobility.y = 0
 *.uav[*].drociMobility.z = 0
 
+*.node[*].veinsmobility.x = 0
+*.node[*].veinsmobility.y = 0
+*.node[*].veinsmobility.z = 0
 ##########################################################
 #                      App Layer                         #
 ##########################################################
