--- a/subprojects/veins_libairmobisim/.project
+++ b/subprojects/veins_libairmobisim/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>veins_libairmobisim2</name>
+	<name>veins_libairmobisim</name>
 	<comment></comment>
 	<projects>
 		<project>veins</project>
