--- a/examples/simpleScenario/omnetpp.ini
+++ b/examples/simpleScenario/omnetpp.ini
@@ -14,7 +14,7 @@ image-path = ../../images
 debug-on-errors = true
 print-undisposed = true
 
-sim-time-limit = ${simTimeLimit = 30s}
+sim-time-limit = ${simTimeLimit = 200s}
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -34,19 +34,25 @@ sim-time-limit = ${simTimeLimit = 30s}
 *.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
+#            DroCIManager parameters                     #
+##########################################################
+*.dManager.updateInterval = ${updateInterval = 0.01s}
+*.dManager.simTimeLimit = ${simTimeLimit}
+*.dManager.host = "localhost"
+*.dManager.moduleType = "veins_libairmobisim.node.Uav"
+
+##########################################################
 #            TraCIScenarioManager parameters             #
 ##########################################################
-*.manager.updateInterval = ${updateInterval = 0.01s}
-*.manager.simTimeLimit = ${simTimeLimit}
+*.manager.updateInterval = ${updateInterval}
 *.manager.host = "localhost"
-
-*.tManager.updateInterval = ${updateInterval}
-*.tManager.host = "localhost"
-*.tManager.port = 9999
-*.tManager.autoShutdown = true
-*.tManager.launchConfig = xmldoc("erlangen.launchd.xml")
-*.tManager.configFile = "erlangen.sumo.cfg"
-
+*.manager.port = 9999
+*.manager.autoShutdown = true
+*.manager.launchConfig = xmldoc("erlangen.launchd.xml")
+*.manager.configFile = "erlangen.sumo.cfg"
+*.manager.moduleDisplayString = ""
+*.manager.moduleType = "vtype0=org.car2x.veins.nodes.Car"
+*.manager.moduleName = "vtype0=node"
 
 
 ##########################################################
@@ -89,6 +95,6 @@ sim-time-limit = ${simTimeLimit = 30s}
 ##########################################################
 #                      App Layer                         #
 ##########################################################
-*.node[*].applType = "ExampleAirMobiSimApp"
+*.node[*].applType = "TraCIDemo11p"
 
 
