Licence stuff, inserter stuff

--- a/examples/simpleScenario/omnetpp.ini
+++ b/examples/simpleScenario/omnetpp.ini
@@ -98,3 +98,8 @@ sim-time-limit = ${simTimeLimit = 200s}
 *.node[*].applType = "TraCIDemo11p"
 
 
+
+[Config Default]
+
+output-vector-file =  ${resultdir}/Default_${runnumber}.vec
+output-scalar-file =  ${resultdir}/Default_${runnumber}.sca
