--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ src/**/*_m.h
 src/**/*_m.cc
 
 airmobisim.proto
-
+src/**/proto/airmobisim.grpc.pb.*
+src/**/proto/airmobisim.pb.*
 
 doc/doxy
 doc/neddoc
@@ -21,80 +22,6 @@ examples/**/.qtenvrc
 examples/**/.cmdenv-log
 examples/**/valgrind.out
 
-subprojects/veins_catch/out
-subprojects/veins_catch/bin/veins_catch_run
-subprojects/veins_catch/src/*.dll
-subprojects/veins_catch/src/*.dylib
-subprojects/veins_catch/src/*.so
-subprojects/veins_catch/src/Makefile
-subprojects/veins_catch/src/veins_catch
-subprojects/veins_catch/src/veins_catch_dbg
-subprojects/veins_catch/src/veins_catch_sanitize
-
-subprojects/veins_inet3/src/Makefile
-subprojects/veins_inet3/src/*.so
-subprojects/veins_inet3/src/*.dll
-subprojects/veins_inet3/src/*.dylib
-subprojects/veins_inet3/src/**/*_m.h
-subprojects/veins_inet3/src/**/*_m.cc
-subprojects/veins_inet3/out
-subprojects/veins_inet3/bin/veins_inet_run
-subprojects/veins_inet3/examples/**/results
-subprojects/veins_inet3/examples/**/.tkenvrc
-subprojects/veins_inet3/examples/**/.qtenvrc
-subprojects/veins_inet3/examples/**/.cmdenv-log
-subprojects/veins_inet3/examples/**/valgrind.out
-
-subprojects/veins_inet/src/Makefile
-subprojects/veins_inet/src/*.so
-subprojects/veins_inet/src/*.dll
-subprojects/veins_inet/src/*.dylib
-subprojects/veins_inet/src/**/*_m.h
-subprojects/veins_inet/src/**/*_m.cc
-subprojects/veins_inet/out
-subprojects/veins_inet/bin/veins_inet_run
-subprojects/veins_inet/examples/**/results
-subprojects/veins_inet/examples/**/.tkenvrc
-subprojects/veins_inet/examples/**/.qtenvrc
-subprojects/veins_inet/examples/**/.cmdenv-log
-subprojects/veins_inet/examples/**/valgrind.out
-
-subprojects/veins_testsims/src/Makefile
-subprojects/veins_testsims/src/*.so
-subprojects/veins_testsims/src/*.dll
-subprojects/veins_testsims/src/*.dylib
-subprojects/veins_testsims/src/**/*_m.h
-subprojects/veins_testsims/src/**/*_m.cc
-subprojects/veins_testsims/out
-subprojects/veins_testsims/bin/veins_testsims_run
-subprojects/veins_testsims/sim/**/results
-subprojects/veins_testsims/sim/**/veins-runall-output
-subprojects/veins_testsims/sim/**/.tkenvrc
-subprojects/veins_testsims/sim/**/.qtenvrc
-subprojects/veins_testsims/sim/**/.cmdenv-log
-subprojects/veins_testsims/sim/**/valgrind.out
-subprojects/veins_testsims/opp_tests/**/work
-
-subprojects/veins_libairmobisim/src/veins_libairmobisim/proto/*
-subprojects/veins_libairmobisim/src/Makefile
-subprojects/veins_libairmobisim/src/*.so
-subprojects/veins_libairmobisim/src/*.dll
-subprojects/veins_libairmobisim/src/*.dylib
-subprojects/veins_libairmobisim/src/**/*_m.h
-subprojects/veins_libairmobisim/src/**/*_m.cc
-subprojects/veins_libairmobisim/out
-subprojects/veins_libairmobisim/bin/veins_libairmobisim_run
-subprojects/veins_libairmobisim/examples/**/results
-subprojects/veins_libairmobisim/examples/**/veins-runall-output
-subprojects/veins_libairmobisim/examples/**/.tkenvrc
-subprojects/veins_libairmobisim/examples/**/.qtenvrc
-subprojects/veins_libairmobisim/examples/**/.cmdenv-log
-subprojects/veins_libairmobisim/examples/**/valgrind.out
-subprojects/veins_libairmobisim/conan.lock
-subprojects/veins_libairmobisim/conanbuildinfo.mak
-subprojects/veins_libairmobisim/conanbuildinfo.txt
-subprojects/veins_libairmobisim/conaninfo.txt
-**/.log
 
 
 conanbuildinfo.mak
