Enabled parallel simulations

--- a/examples/simpleScenario/omnetpp.ini
+++ b/examples/simpleScenario/omnetpp.ini
@@ -7,6 +7,7 @@ cmdenv-status-frequency = 1s
 **.cmdenv-log-level = info
 network = SimpleScenarioNetwork
 image-path = ../../images
+repeat=50
 
 ##########################################################
 #            Simulation parameters                       #
